--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "web-push": "web-push"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^4.0.0",
+    "dotenv": "^16.0.3",
     "koa": "^2.14.1",
+    "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "web-push": "^3.5.0"
   }
 }
