--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@koa/cors": "^4.0.0",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
+    "google-play-billing-validator": "^2.1.3",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
